--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^7.1.0",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
+    "html-webpack-hot-plugin": "^1.2.2",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "sass": "^1.26.5",
@@ -45,6 +46,7 @@
     "@babel/polyfill": "^7.8.7",
     "D": "^1.0.0",
     "cross-env": "^7.0.2",
+    "normalize.css": "^8.0.1",
     "webpack-dev-server": "^3.11.0"
   }
 }
